--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -7,22 +7,24 @@
       h1
         = @company.title
       =raw @company.body
-      br
-      | T: 
-      = @company.phone
-      '&nbsp; - &nbsp; 
-      =raw @link
+      .tlf-box
+        .tlf-content
+	      | T: 
+	      = @company.phone 
+	      '&nbsp; - '&nbsp;
+	    .web-content
+	      =raw @link
       - if can?(:edit, @company)
         .edit
+          = link_to 'Send E-Mail til alle i firma', "mailto:#{@company.users.map(&:email).join(', ')}", :class =>'button'
+          '&nbsp;
           = link_to t('admin.edit'), edit_company_path(@company), :class =>'button'
           '&nbsp;   
           = link_to t('admin.delete'), @company, :confirm => t('admin.are_you_sure'), :method => :delete, :class =>'button'
           '&nbsp;  
           = link_to 'tilføj logo', new_company_company_thumb_path(@company), :class =>'button'
 
-	
-
-        p= link_to 'Send E-Mail til alle i firma', "mailto:#{@company.users.map(&:email).join(', ')}"
+          
 
 
       
