--- a/app/views/bookings/edit.html.slim
+++ b/app/views/bookings/edit.html.slim
@@ -1,16 +1,16 @@
 .grid-container
-
-  .squared-box
+  .bookings-box
     .borders
       .menu-box
         = render :partial => "shared/menu"
       .content
+        h1 Book Mødelokaler
         = render 'form'
 
-        -#= link_to 'bookings', meetingroom_bookings_path(@meetingroom)
 
-  .squared-box
+  .calendar-box
     .borders
       div id='calendar'
+
 
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
