--- a/app/views/bookings/index.html.slim
+++ b/app/views/bookings/index.html.slim
@@ -15,7 +15,7 @@
       .grid-1
         'Kaffe og vand
       .grid-1
-        'The
+        'Brød
       .grid-2
         'Andet
 
@@ -47,7 +47,7 @@
         
 	  .grid-2.edit_symbold.edit
         -if booking.custom_message?
-          = link_to image_tag('exclamation.png'),meetingroom_booking_path(booking.meetingroom,booking), :title => 'andet!'
+          = link_to image_tag('plus_16.png'),meetingroom_booking_path(booking.meetingroom,booking), :title => 'andet!'
           '&nbsp; 
 	    = link_to image_tag('magnifying_16.png'),meetingroom_booking_path(booking.meetingroom,booking), :title => 'vis'
         '&nbsp; 
