--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -258,7 +258,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		a:hover{ color:#000; background-color:#fff; }
 	}
 	.image-box{
-		height:376px;
+		min-height:376px;
 	}
 }
 
