--- a/app/views/history/index.html.slim
+++ b/app/views/history/index.html.slim
@@ -11,6 +11,8 @@
 	    - if can?(:edit, @history)
 	      .text-right
 	        = link_to t('admin.edit'), edit_page_path(@history), :class => 'button'
+        br
+        = link_to 'Galleri', gallery_index_path
 
   .squared-box
     .borders.image-box
