image on mail all

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -173,3 +173,15 @@ a:hover {
 		text-align:center;
 	}	
 }
+
+.bottom-margin{
+	margin-top:4px;
+}
+.mail-image{
+	display: inline;
+	float: left;
+	margin-left: 0px;
+	margin-right: 0px;
+	min-height: 1px;
+	width: 30px;
+}
